# advent_2024

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  requirements.in  requirements.txt
go/: BUILD.bazel  main.go
go/day/: BUILD.bazel  day_00.go
input/: day00_puzzle.txt
py/: BUILD.bazel  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  day11.py  day12.py  day13.py  main.py  main_test.py  util.py
