load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/minor-fixes/advent_2024/go",
    visibility = ["//visibility:private"],
    deps = ["@rules_go//go/runfiles"],
)

go_binary(
    name = "go",
    data = [
        "//go/day",
        "//input",
    ],
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)
