load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "py",
    srcs = glob(["day*.py"]) + ["util.py"],
    deps = [
        requirement("absl-py"),
        requirement("joblib"),
    ],
)

py_binary(
    name = "aoc",
    srcs = ["main.py"],
    data = ["//input"],
    main = "main.py",
    deps = [
        ":py",
        requirement("absl-py"),
    ],
)

py_test(
    name = "aoc_test",
    srcs = ["main_test.py"],
    data = ["//input"],
    main = "main_test.py",
    deps = [
        ":py",
        requirement("absl-py"),
    ],
)
